# ai-radar

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_chat.py  run_curation.py  run_spike.py
.claude/agents/: sdd-architect.md  sdd-auditor.md  sdd-executor.md  sdd-test-writer.md
.claude/skills/high-value-tests/: SKILL.md
.claude/skills/sdd-conductor/: SKILL.md
docs/: amazon-bedrock-agentcore-research.md  app-design-on-agentcore.md  architecture-principles.md
infra/: app.py
infra/lib/: card_store.py
infra/stacks/: card_store_stack.py
specs/curation-graph/: audit.md  contract.md  intent.md  roadmap.md  tasks.md
specs/dynamodb-card-store/: audit.md  contract.md  intent.md  roadmap.md  tasks.md
specs/tavily-discovery/: audit.md  contract.md  intent.md  roadmap.md  tasks.md
src/curation/: __init__.py  composite.py  config.py  dynamo.py  graph.py  interfaces.py  local.py  nodes.py  state.py  tavily.py
src/spike/: __init__.py  bedrock.py  cards.py  chat.py  config.py  feeds.py  pipeline.py  retrieval.py
tasks/phase-1-curation-mvp/: 01-langgraph-curation-graph.md  02-tavily-discovery.md  03-dynamodb-card-store.md  04-agentcore-runtime-packaging.md  05-eventbridge-daily-schedule.md  06-run-observability.md  README.md
tests/: conftest.py  test_composite.py  test_dynamo_store.py  test_graph.py  test_infra.py  test_local_store.py  test_tavily.py
