[project]
name = "ai-radar"
version = "0.0.0"
description = "AI Radar — AI-news curation feed + RAG chatbot (Phase 0 spike)"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35",
    "feedparser>=6.0",
    "langgraph>=1.2.9",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "tavily-python>=0.7.26",
]

[tool.uv]
# Application, not a library — don't try to build/install the project itself.
package = false

[dependency-groups]
dev = [
    "moto>=5.2.2",
    "pytest>=9.1.1",
]
infra = [
    "aws-cdk-lib>=2.261.0",
    "constructs>=10.7.1",
]
